fix alignment

--- a/components/models/api-node-renderer/node.module.scss
+++ b/components/models/api-node-renderer/node.module.scss
@@ -2,7 +2,6 @@
   display: flex;
   width: fit-content;
   align-items: center;
-  justify-content: center;
   position: relative;
   font-size: var(--bit-p-xs);
   word-break: normal;
